Últimas alterações nas telas de Usuário

--- a/Views/Emprestimo/Listagem.cshtml
+++ b/Views/Emprestimo/Listagem.cshtml
@@ -39,7 +39,7 @@
 
                 @for (int i = 1; i <= numTotalPag; i++)
                 {
-                    <span><a href="/Livro/Listagem?paginaAtual=@i">@i</a></span>
+                    <span><a href="/Emprestimo/Listagem?paginaAtual=@i">@i</a></span>
                 }
             </div>
         </form>
