--- a/Views/Usuario/Exclusao.cshtml
+++ b/Views/Usuario/Exclusao.cshtml
@@ -1,10 +1,10 @@
 @model Usuario
 
 <h1>ALERTA!</h1>
-<h2>Tem certeza que deseja Excluir o Usuário @Model.Nome (@Model.Login)?</h2>
+<h2>Tem certeza que deseja excluir o Usuário @Model.Nome (@Model.Login)?</h2>
 <p>A exclusão é irreversível!</p>
 
-<form action="Exclusao" method="post">
+<form action="Exclusao" method="POST">
     <input type="hidden" name="id" value="@Model.Id">
     <input name="decisao" type="submit" value="CANCELAR">
     <input name="decisao" type="submit" value="EXCLUIR">
